@@ -8,15 +8,17 @@ AUX aegisub-3.0-pre-fix-ln-install.patch 447 RMD160 6109c0814f32b09c7877a2c6521a
 AUX aegisub-3.0-pre-include-stdint.h.patch 312 RMD160 2d126da25046079cfbac52488067cf97d3346eda SHA1 990e7d8cd77314bca503a82409d66a966c84f69e SHA256 0e18726d9c348f0d16fdd54e93cadf913fecd8b4043618a3d79a5898a542a5cf
 DIST aegisub-2.1.8.tar.gz 2431099 RMD160 d2630f838a9e8720c65d9f18010e80e17fb8183b SHA1 70c51a21c86f73d744fcf1e080e89d98885e557c SHA256 a67356e5c4fa376738d363f1cf5e50aa74e6b69e76a089ed0442bf6d7390d769
 DIST aegisub-2.1.9-dev-r5995.tar.bz2 1933924 RMD160 c12b306893c2f26bd0783f8f5708df01e6196725 SHA1 b6401a1cf6d023ac8e449bcf16edef8a1b211527 SHA256 2b2ad09a62f5cd3229a79381aa2797441cbaae4c5ae836ec0d71cf9a019f2bf0
+DIST aegisub-2.1.9.tar.xz 1670496 RMD160 868be6b7a5a9dacc9045c318415445de90234cd0 SHA1 842d2088667d97a16441204d2341b5d58445ffec SHA256 e0591c96183f7713bb14f9d357a2e12bdd3478e4d0a8fad77f14f87a4fc22db7
 DIST aegisub-2.1.9_pre5440.tar.xz 1697088 RMD160 1e70f9581a9147252ed96843b780d7af3506041b SHA1 c32b4d84e40f22f854310b966ee9aa768bc952dd SHA256 8bbf637de2962691e5f2a2c67710418b887b83f1d085bf8d29ee5a47e688f19a
 DIST aegisub-2.1.9_pre5585.tar.xz 1656500 RMD160 706c599e688871f3f15992c259c8c10438af6d29 SHA1 877f32d9d280d09fc5aa957a125f94e7897d8f2e SHA256 68b8c073acb0aa20025779138374bbacfb41f056b9ee95d078d2bc2644875a6d
 DIST aegisub-3.0_pre4897.tar.xz 1743732 RMD160 7ff9c6c8c51673118a6c1a4f8d18506b885ba1f0 SHA1 69854944f57202c2afb3a24edf60ca85f535fe29 SHA256 d4d374e815b907403ad40438f54567e3e05d79e18c175def31107273f1c8e7af
 EBUILD aegisub-2.1.8.ebuild 1738 RMD160 d4010837c8ace29b00bb33eec2875d9047e32f27 SHA1 b12259f80b8d68622f0126455b61003f52fe9079 SHA256 b1f38a053c108b8d37fd52c1ee3b5f05fba6f4b367ae335ab29ae336e73f225a
-EBUILD aegisub-2.1.9999.ebuild 1400 RMD160 7f9425e1fcca5fc67f2dd7a77a4e8c475f67b57d SHA1 b8c9de0ef2a32e9768407d5b3f7275570025251a SHA256 0f16dc8ea78800295d8bef50a6278c07eb3381c89a6761050c594ffa9c7631df
+EBUILD aegisub-2.1.9.ebuild 1321 RMD160 aea84d5235ad204b56403c671580051f8008f51d SHA1 4c331ee8851fe87ae0546e46bd127b5bb99b3fe3 SHA256 1601e8ca099b3bd540309080c479dc2daa26151a0c2e73a20d6c2cc37fc04572
+EBUILD aegisub-2.1.9999.ebuild 1393 RMD160 a589b69fc715065cf83fa1280cac3ab0e35f8fc7 SHA1 2dfda772d988f218c5c1b225cac1b5b47a48328a SHA256 c50668efb2b885fa5e39abf7e63063e5862130c3429a29e1603f60acd1e5b044
 EBUILD aegisub-2.1.9_pre5440.ebuild 1407 RMD160 c652ec49a0974fa1bbcc8a50c66ec3c3bc15047a SHA1 87cbb5417e14b8ca99c867a29b091c2922cb7535 SHA256 e928d963c68c76764b30fe08d92614cc81af41eb3a4d6cf22f9748ff398899c6
 EBUILD aegisub-2.1.9_pre5585.ebuild 1328 RMD160 524216faf897b1238e94c6ec97e716f9e94fb0e0 SHA1 0007ffb11de407cc116a8374b9d114f886e7d381 SHA256 e3059da14f2409d2e5928e7c06675041425437518221d849b8cdc1cb69bdfbfe
 EBUILD aegisub-2.1.9_pre5995.ebuild 1325 RMD160 a7bd65ed9e05ae29d4d9f176e61625d19bf31e00 SHA1 3c2d124d421b3ea9ae6f02b5de9bc7dad633ed95 SHA256 bce50cf9c18ae88845638fd205946ad9832f12ada4c7287ab4277f393b5f6cf7
 EBUILD aegisub-3.0_pre4897.ebuild 2213 RMD160 32cd396bd60a44ddc73d14b09567f3eda5cb424e SHA1 09efbf59b60ca6edc33f96f9ffa2df43c444a9f8 SHA256 74da88964dbd82f667facc7fda5369d43d15784b69e12b229cf3e58a86b3c54f
 EBUILD aegisub-9999.ebuild 1810 RMD160 5bf3e56aae7bb649e37343ed89241b7bab6a896d SHA1 f178b7aac5f03d0ff2dbfa1fc04742d25b133c67 SHA256 280cf9f832b23c840f509434985765505793a1935406a264d82f02c37417e7b9
-MISC ChangeLog 1796 RMD160 16f4aba92886d55658594fdbbbc292359d8d772b SHA1 69338d67f7b8e2ea75f89190bfed3242193d4a07 SHA256 3a1f9a854e3187406b0670d3b03c911e402c81938056017329d9a5c8130b2e05
+MISC ChangeLog 1935 RMD160 f7b4e871f055e50b7491c880e187a1b93dae6937 SHA1 18a2d97ef7ed44c42c9ec257c4defbddd4c0ec75 SHA256 b058250d8d8cdef1f932818b1df243bb05e224d359e6a0dc639b304f064dbf23
 MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
