@@ -1,6 +1,12 @@
 # ChangeLog for media-video/aegisub
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*aegisub-2.1.9 (10 Jan 2012)
+
+  10 Jan 2012; Nikoli <nikoli@lavabit.com> +aegisub-2.1.9.ebuild,
+  aegisub-2.1.9999.ebuild:
+  version bump
 
 *aegisub-2.1.9_pre5995 (14 Dec 2011)
 
